refactor: remove searh projects response dto
