# apps/server/src/main/java/com/skkil/sync/project/mapper/ProjectMapper.java
@@ -3,7 +3,6 @@ package com.skkil.sync.project.mapper;
 import com.skkil.sync.project.dto.response.GetProjectResponse;
 import com.skkil.sync.project.dto.response.GetProjectTeammatesResponse;
 import com.skkil.sync.project.dto.response.GetProjectsResponse;
-import com.skkil.sync.project.dto.response.SearchProjectsResponse;
 import com.skkil.sync.project.model.Project;
 import com.skkil.sync.project.model.Teammate;
 import java.net.URL;
@@ -12,8 +11,6 @@ import org.mapstruct.Mapper;
 
 @Mapper(componentModel = "spring")
 public interface ProjectMapper {
-
-  SearchProjectsResponse.Project toSearchProjectsResponseProject(Project project);
 
   GetProjectsResponse.Project toGetProjectsResponseProject(Project project);
 
